--- a/data-wrangling/notebook.ipynb
+++ b/data-wrangling/notebook.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Proyek Analisis Data: Bike Sharing Dataset \n",
+    "# Proyek Analisis Data: Bike Sharing Dataset \n"
    ]
   },
   {
